--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <string-array name="drawer_titles">
         <item>Tabs</item>
-        <item>WebView</item>
+        <item>Movimientos</item>
     </string-array>
 
     <string name="drawer_open">Open navigation drawer</string>
@@ -15,4 +15,11 @@
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
+    <string name="title_activity_movimiento">Movimiento</string>
+
+    <string name="listado_movimientos">Listado movimientos</string>
+    <string name="action_movimiento_add">Añadir movimiento</string>
+    <string name="anyadir_movimiento">Añadir movimiento</string>
+    <string name="action_movimiento_save">Guardar movimiento</string>
+
 </resources>
